fix: align settings ownership and runtime policy